try to patch font size & hover on mobile device issues

--- a/events/moztw-lab/style.css
+++ b/events/moztw-lab/style.css
@@ -458,3 +458,7 @@ a.event-link.fallback-register-button {
 	padding: 5px 25px; 
 
 }
+
+.nav a:hover {
+	background: none;
+}
